Settings: Add FastCharge preference into Battery settings  * Several OEMs let the user decide whether to enable or disable quick    charging technology when using a quickcharge charger.    Samsung, for example, exposes a sysfs node to disable it at    will, depending on what the user sets in battery settings UI.
 * Disabling fast charge may be useful for reducing the heat produced by
   the device while charging, or for extending the lifespan of the battery.

 * This commit introduces a switch preference for disabling fastcharge
   on devices that support said feature.

Change-Id: I7dd09d357e9bd555a8efeaf9ee191e52b9f2d151
Signed-off-by: Arijit78 <sahaarijit2007@gmail.com>

--- a/res/values/matrixx_strings.xml
+++ b/res/values/matrixx_strings.xml
@@ -81,6 +81,10 @@
     <string name="show_powermenu">Show Power menu</string>
     <string name="partial_screenshot">Partial screenshot</string>
 
+    <!-- FastCharge feature -->
+    <string name="fast_charging_title">Fast charging</string>
+    <string name="fast_charging_summary">Disable to reduce the heat produced by the device while charging or to extend the lifespan of the battery</string>
+
     <!-- Long swipe gestures -->
     <string name="navbar_gesture_tweaks_pref_title">Advanced gestures options</string>
     <string name="navbar_gesture_tweaks_pref_summary">Customize gestures and set custom actions</string>
