--- a/res/values/matrixx_strings.xml
+++ b/res/values/matrixx_strings.xml
@@ -84,6 +84,7 @@
     <!-- FastCharge feature -->
     <string name="fast_charging_title">Fast charging</string>
     <string name="fast_charging_summary">Disable to reduce the heat produced by the device while charging or to extend the lifespan of the battery</string>
+    <string name="restricted_current_summary">Set max allowed current (mA)</string>
 
     <!-- Long swipe gestures -->
     <string name="navbar_gesture_tweaks_pref_title">Advanced gestures options</string>
