--- a/res/xml/power_usage_summary.xml
+++ b/res/xml/power_usage_summary.xml
@@ -136,10 +136,11 @@
         android:title="@string/battery_charge_cycles"
         android:selectable="false" />
 
-    <SwitchPreference
+    <Preference
         android:key="fast_charging"
         android:title="@string/fast_charging_title"
         android:summary="@string/fast_charging_summary"
+        android:fragment="com.android.settings.fuelgauge.fastcharge.FastChargingSettings"
         settings:controller="com.android.settings.fuelgauge.FastChargingPreferenceController"/>
 
     <com.android.settingslib.widget.FooterPreference
